--- a/videoDownlaoding.ipynb
+++ b/videoDownlaoding.ipynb
@@ -41,7 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List of YouTube video URLs\n",
     "video_urls = {\n",
     "    \"https://www.youtube.com/watch?v=MjQG-a7d41Q\":\"trailers\",\n",
     "    \"https://www.youtube.com/watch?v=dYo91Fq9tKY\":\"trailers\",\n",
@@ -85,7 +84,6 @@
     "    \"https://www.youtube.com/watch?v=cYATyMUM0RI\":\"ads\"\n",
     "}\n",
     "\n",
-    "# Categories\n",
     "categories = ['trailers','news','nature','ads']\n",
     "\n",
     "\n"
@@ -102,9 +100,7 @@
     "    for url, category in video_data.items():\n",
     "        try:\n",
     "            yt = YouTube(url)\n",
-    "            # Download the video\n",
     "            video_path = yt.streams.filter(file_extension='mp4').first().download(output_path=category)\n",
-    "            #print(f\"Downloaded: {url}\")\n",
     "            downloaded_videos[video_path] = category\n",
     "        except Exception as e:\n",
     "           print(f\"Error downloading {url}: {e}\")\n",
@@ -123,27 +119,20 @@
     "def extract_random_clips(downloaded_videos, clip_duration=20):\n",
     "    for video_path, category in downloaded_videos.items():\n",
     "        try:\n",
-    "            # Load the video clip\n",
     "            clip = VideoFileClip(video_path)\n",
-    "            print(\"Loaded clip:\", clip)  # Print out the loaded clip\n",
-    "            # Get the duration of the video\n",
+    "            print(\"Loaded clip:\", clip) \n",
     "            total_duration = clip.duration\n",
     "            if total_duration is None:\n",
     "                print(f\"Error: Could not retrieve duration of {video_path}. Skipping.\")\n",
     "                continue\n",
-    "            # Check if the video is at least clip_duration long\n",
     "            if total_duration < clip_duration:\n",
     "                print(f\"Video duration of {video_path} is shorter than the clip duration. Skipping.\")\n",
     "                continue\n",
-    "            # Choose a random start time for the clip\n",
     "            start_time = random.uniform(0, total_duration - clip_duration)\n",
-    "            # Extract the random clip\n",
     "            random_clip = clip.subclip(start_time, start_time + clip_duration)\n",
-    "            # Create directory for clips if not exists\n",
     "            clips_dir = os.path.join(category + \"_clips\")\n",
     "            if not os.path.exists(clips_dir):\n",
     "                os.makedirs(clips_dir)\n",
-    "            # Save the clip to a new file\n",
     "            output_path = os.path.join(clips_dir, f\"{os.path.basename(video_path).split('.')[0]}_random_clip.mp4\")\n",
     "            random_clip.write_videofile(output_path, codec='libx264')\n",
     "            print(f\"Extracted random clip from {video_path} to {output_path}\")\n",
@@ -1429,7 +1418,6 @@
    ],
    "source": [
     "downloaded_videos = download_videos(video_urls)\n",
-    "# Extract random clips\n",
     "extract_random_clips(downloaded_videos)"
    ]
   }
